client/src/components/Gems/Gems.css
.mosaic.row {
  margin: 0px;
  height: 100vh;
  overflow: auto;
}

.picture {
  align-self: center;
  margin-top: 20px;
  box-shadow: 3px 3px 5px 6px #ccc;
}

.title {
  font-size: 20px;
  text-align: center;
}

.card {
  color: black;
  height: 450px;
  box-shadow: 4px 4px 4px 4px #00000080;
  margin-top: 20px;
  margin-bottom: 20px;
  margin-right: 20px;
  margin-left: 20px;
  border-radius: 3px;
  border-color: #27241d;
  transition: 0.4s;
}

.card:hover {
  transform: scale(0.95, 0.95);
  box-shadow: 5px 5px 30px 15px rgba(0, 0, 0, 0.25),
    -5px -5px 30px 15px rgba(0, 0, 0, 0.22);
}

.icons {
  text-align: center;
}

button {
  margin: 5px;
}

.name {
  text-align: center;
}

.date {
  text-align: center;
}

.customToast.react-snackbar-message {
  background: #a081d9 !important;
  width: 50%;
  text-align: center;
  font-size: 20px !important;
  font-weight: bold;
  margin-left: auto !important;
  margin-right: auto !important;
}

@media only screen and (max-width: 600px) {
  .card {
    font-size: 13px;
    margin: 0px !important;
    margin-bottom: 10px !important;
  }
}

